<resources>
    <string name="app_name">Session 4 Task</string>
    <string name="lifecycle_examples">LifeCycle Examples!</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="btn_togglebutton">ToggleButton</string>
    <string name="text_toggle_button">Toggle Button</string>
    <string name="btn_material_buttons">material Buttons</string>
    <string name="text_switch">Switch</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_design_components">DesignComponents</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="single_choice_dialog">Single Choice Dialog</string>
    <string name="multi_choice_dialog">Multi Choice Dialog</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="bottom_dialog">Bottom Dialog</string>
    <string name="rename_file">Rename File</string>
    <string name="submit">Submit</string>

    <!--    single choice -->

    <string-array name="single_choice_item">
        <item>Single Choice 1</item>
        <item>Single Choice 2</item>
        <item>Single Choice 3</item>
        <item>Single Choice 4</item>
        <item>Single Choice 5</item>
        <item>Single Choice 6</item>
    </string-array>

    <!--    multiple choose-->
    <string-array name="multiple_choice_item">
        <item>Multiple Choice 1</item>
        <item>Multiple Choice 2</item>
        <item>Multiple Choice 3</item>
        <item>Multiple Choice 4</item>
        <item>Multiple Choice 5</item>
        <item>Multiple Choice 6</item>
    </string-array>

    <string-array name="version_item">
        <item>Version 4.4</item>
        <item>version 5.0</item>
        <item>version 6.0</item>
        <item>version 7.0</item>
        <item>version 8</item>
        <item>version 9</item>
        <item>version 10</item>
        <item>version 11</item>
    </string-array>

    <string-array name="sdk_item">
        <item>Sdk 9</item>
        <item>Sdk 10</item>
        <item>Sdk 12</item>
        <item>Sdk 17</item>
        <item>Sdk 26</item>
        <item>Sdk 28</item>
        <item>Sdk 29</item>
        <item>Sdk 30</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name">File Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="custom_name">Name</string>
    <string name="add_items">Add items</string>
    <string name="android_version_name">Android version name</string>
    <string name="description">Description</string>
    <string name="released_on">Released On</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_here">Login Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="fragment_one">Fragment One</string>
    <string name="enter_something">Enter Something</string>
    <string name="sent_to_fragment_two">Sent to fragment Two</string>
    <string name="send_to_fragment_one">Send to Fragment One</string>
    <string name="fragment_two">Fragment Two</string>

</resources>