<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/m_20"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/regFrag"
        android:layout_height="match_parent"
        tools:context=".FragmentLogin">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"

            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="@dimen/m_16"
            app:cardElevation="@dimen/m_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:padding="22dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_20" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="@dimen/m_16"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_16"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:padding="@dimen/t_12"
                    android:background="@drawable/bg_login"
                    android:id="@+id/edtUsername"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="@dimen/m_16"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_16"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:padding="@dimen/t_12"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/bg_login"
                    android:id="@+id/edtPass"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="@dimen/m_16"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_16"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:padding="@dimen/t_12"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_login"
                    android:maxLines="1"
                    android:id="@+id/edtConfirmPass"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerBtn"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margint_top"
                    android:layout_marginBottom="@dimen/m_16"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t_16" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/m_16">

            <TextView
                android:id="@+id/don_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/already_have_an_account"

                android:textColor="@color/black"
                android:textSize="@dimen/t_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/login_here"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/t_16"
                android:textStyle="bold"


                />

        </LinearLayout>

    </LinearLayout>
</layout>
